# remote_llm_langGraph_open

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  REFACTOR_SUMMARY.txt  main.py  pyproject.toml  run_flow.py
app/: exceptions.py  logger.py
app/agents/: __init__.py  base.py  chat_agent.py  chat_node.py  doc_agent.py  doc_node.py  sueprvisor_agent_bak.py  supervisor_agent.py  supervisor_agent_bak.py  supervisor_agent_v3.py  supervisor_agent_v4.py  vision_agent.py  vision_node.py
app/api/v1/: agent_api.py  api.py
app/config/: pydantic_settings_file.py
app/cores/: config.py  embeding.py  llm.py
app/database/: base.py  session.py  utils.py
app/database/kb/: milvus_kb_service.py
app/flow/: base_flow.py  flow_factory.py  planning.py
app/graphs/: __init__.py  conditional_logic.py  graph_state.py
app/memory/: base.py
app/prompts/: chat_prompt.py  doc_prompt.py  supervisor_prompt.py  vision_prompt.py
app/rag/file_loader/: __init__.py  doc_loader.py
app/rag/file_splitter/: __init__.py  ali_text_splitter.py  chinese_recursive_text_splitter.py  chinese_text_splitter.py  (+1 more)
app/schemas/: __init___.py  schema.py
app/tools/: __init__.py  base.py  create_chat_completion.py  custom_decorator_tool.py  file_process_tool.py  image_segmentation_tool.py  planning_tool.py  reflect_tool.py  tool_collection.py  tools_test.py  utils.py
test/: read_doc_demo.py  test.py  test_db_connection.py  test_langgraph.py  test_merge.py  test_milvus.py  test_supervisor_refactored.py  test_update_readme.py
web/: index.html  index.py  index_V2.py  script.js  style.css
(+10 files in other folders)
